--- a/.github/workflows/cname-scan.yml
+++ b/.github/workflows/cname-scan.yml
@@ -14,14 +14,14 @@ jobs:
     - name: Query GitHub for CNAME files
       run: |
         PAGE=1
-        PER_PAGE=1000
+        PER_PAGE=100
         MAX_PAGES=10
         TOTAL_RESULTS=0
         echo "domains:" > results.yml
         while [ $PAGE -le $MAX_PAGES ]; do
-          RESPONSE=$(curl -s -H "Accept: application/vnd.github.v3+json" \
-                          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-                          "https://api.github.com/search/code?q=path%3A**%2FCNAME&type=code&per_page=$PER_PAGE&page=$PAGE")
+          RESPONSE=$(curl -s -H "Accept: application/vnd.github+json" \
+                          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+                          "https://api.github.com/search/code?q=path%3A**%2FCNAME&per_page=$PER_PAGE&page=$PAGE")
           echo $RESPONSE
           echo "$RESPONSE" | jq -r '.items[] | "- domain: \(.repository.full_name)\n  owner: \(.repository.owner.login)\n  repo: \(.repository.name)\n  last_scan: \(.repository.updated_at)"' >> results.yml
           RESULT_COUNT=$(echo "$RESPONSE" | jq '.items | length')
