--- a/.github/workflows/cname-scan.yml
+++ b/.github/workflows/cname-scan.yml
@@ -16,12 +16,16 @@ jobs:
         PAGE=1
         PER_PAGE=100
         MAX_PAGES=10
+        QUERY="filename:CNAME"
         TOTAL_RESULTS=0
         echo "domains:" > results.yml
         while [ $PAGE -le $MAX_PAGES ]; do
-          RESPONSE=$(curl -s -H "Accept: application/vnd.github+json" \
+          RESPONSE=$(curl -G -H "Accept: application/vnd.github+json" \
                           -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-                          "https://api.github.com/search/code?q=path%3A**%2FCNAME&per_page=$PER_PAGE&page=$PAGE")
+                          --data-urlencode "q=$QUERY" \
+                          --data-urlencode "per_page=$PER_PAGE" \
+                          --data-urlencode "page=$PAGE" \
+                          "https://api.github.com/search/code")
           echo $RESPONSE
           echo "$RESPONSE" | jq -r '.items[] | "- domain: \(.repository.full_name)\n  owner: \(.repository.owner.login)\n  repo: \(.repository.name)\n  last_scan: \(.repository.updated_at)"' >> results.yml
           RESULT_COUNT=$(echo "$RESPONSE" | jq '.items | length')
